fixed issue with height of app when address bar is visible on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,4 +20,5 @@ a {
   height: 100%;
   width: 100%;
   background: green;
+  min-height: -webkit-fill-available;
 }
